--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,9 @@
    This is a CSS comment. Anything between /*  and * / will be like this.
    Comments have NO effect on your webpage. NONE! ZERO!
 */
+
+ #blinking-text {
+      color: red;
+    }
+
+    
